-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5, 6.8, 6.9
-
None
-
-
5d599c305 (dev), 10c9ff0db (6.9), d137a96d8 (6.8), c68dfb564 (dev), 75e7010db (tqtc/lts-6.5), b818fde98 (6.9), 4d803d788 (6.8)
-
Multimedia wk 5-6
To reproduce, use AudioRecorder app.
1. Select audio codec A-EC3 (has a buffer size of 12288 bytes
2. Record audio and stop
3. Select audio codec AAC (has a buffer size of 8192)
4. Record audio and stop
5. If app did not crash, repeat from 1
The reason is a bug in the logic for sending audio buffers. An internal 'm_pcm' array is used to accumulate data, but if this array size is greater than the current buffer size, the application crashes when copying a negative number of bytes.
- is duplicated by
-
QTBUG-117396 [Crash] Stopping the recording after switching between the audio codecs causes the audiorecorder example to crash on android
-
- Closed
-
| For Gerrit Dashboard: QTBUG-133201 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 619553,3 | QAudioInput: Drain internal buffer if buffer size was reduced | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 619872,2 | QAudioInput: Drain internal buffer if buffer size was reduced | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 620030,2 | QAudioInput: Drain internal buffer if buffer size was reduced | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 620220,2 | Rename frameSize/setFrameSize to bufferSize/setBufferSize | dev | qt/qtmultimedia | Status: MERGED | +2 | +1 |
| 620248,2 | QAudioInput: Drain internal buffer if buffer size was reduced | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
| 620276,2 | Rename frameSize/setFrameSize to bufferSize/setBufferSize | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 620278,4 | Rename frameSize/setFrameSize to bufferSize/setBufferSize | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 626825,1 | Rename frameSize/setFrameSize to bufferSize/setBufferSize | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: ABANDONED | 0 | 0 |