QAudioInput: Drain internal buffer if buffer size was reduced

This patch fixes a crash if audio codec is changed when recording from
QAudioInput.

When recording audio from QAudioInput, the audio encoder configures the
QAudioInput's buffer size according to the buffer size preferred by the
audio codec. When changing audio codec between recordings, this can
cause the buffer size to shrink. We must therefore ensure that the
QAudioInput implementation drains extra data that may have accumulated
in its internal audio buffer before sending new data.

Fixes: QTBUG-133201
Task-number: QTBUG-113247
Task-number: QTBUG-132532
Pick-to: 6.8 6.5
Change-Id: Ie49742069ab47ef76cd99b5462a06dee630e2df4
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
(cherry picked from commit 5d599c30563bbda634976b37bd85c930905fc556)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>